comment improvement
